<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>robot_model_server_core</name>
  <version>0.1.0</version>
  <description>
    Core library for robot model publishing: URDF parsing, KDL tree walking, transform computation, and mimic joint handling.
  </description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author email="karsten@osrfoundation.org">Karsten Knese</author>
  <author email="sloretz@openrobotics.org">Shane Loretz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros_core</buildtool_depend>

  <depend>kdl_parser</depend>
  <depend>urdf</depend>

  <exec_depend>liborocos-kdl</exec_depend>

  <build_depend>liborocos-kdl-dev</build_depend>

  <build_export_depend>liborocos-kdl-dev</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
