<?xml version="1.0"?>
<package format="2">
  <name>robot_model_server_core</name>
  <version>0.1.0</version>
  <description>
    Core library for robot model publishing: URDF parsing, KDL tree walking, transform computation, and mimic joint handling.
  </description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author email="karsten@osrfoundation.org">Karsten Knese</author>
  <author email="sloretz@openrobotics.org">Shane Loretz</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>sdformat_urdf</depend>

  <exec_depend>liborocos-kdl</exec_depend>

  <build_depend>liborocos-kdl-dev</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
