<?xml version="1.0"?>
<package format="2">
  <name>robot_model_server_ros</name>
  <version>0.1.0</version>
  <description>
    ROS 2 integration for robot model publishing: node, topics, parameters, tf2 broadcasters.
  </description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author email="karsten@osrfoundation.org">Karsten Knese</author>
  <author email="sloretz@openrobotics.org">Shane Loretz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros_core</buildtool_depend>

  <depend>robot_model_server_core</depend>
  <depend>builtin_interfaces</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
